force-app/main/default/objects/Case/fields/Account_Opened_with_Lender__c.field-meta.xml
<CustomField>
    <fullName>Account_Opened_with_Lender__c</fullName>
    <label>Account Opened with Lender</label>
    <type>Date</type>
</CustomField>