force-app/main/default/objects/Case/fields/account_sfid__c.field-meta.xml
<CustomField>
    <fullName>account_sfid__c</fullName>
    <label>ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>