force-app/main/default/objects/Case/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>TEXT(Account.Account_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status of the Account related to this Case</inlineHelpText>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>