force-app/main/default/objects/Case/fields/Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Age_Days__c</fullName>
    <description>Calculates the number of days a case is past its due date</description>
    <formula>TODAY () -  Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>