force-app/main/default/objects/Case/fields/All_Contract_Pages__c.field-meta.xml
<CustomField>
    <fullName>All_Contract_Pages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Contract Pages</label>
    <type>Checkbox</type>
</CustomField>