force-app/main/default/objects/Case/fields/Amount_Approved_by_Recourse__c.field-meta.xml
<CustomField>
    <fullName>Amount_Approved_by_Recourse__c</fullName>
    <label>Amount Approved by Recourse</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>