force-app/main/default/objects/Case/fields/Amount_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Amount_Resolved__c</fullName>
    <inlineHelpText>Testing field only</inlineHelpText>
    <label>Amount Resolved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>