force-app/main/default/objects/Case/fields/Assigned_Credit_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Credit_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Credit Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>