force-app/main/default/objects/Case/fields/Augusta_Requesting_Consent_Form__c.field-meta.xml
<CustomField>
    <fullName>Augusta_Requesting_Consent_Form__c</fullName>
    <label>Augusta Requesting Consent Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>