force-app/main/default/objects/Case/fields/Billing_Doc__c.field-meta.xml
<CustomField>
    <fullName>Billing_Doc__c</fullName>
    <label>Billing Doc #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>