force-app/main/default/objects/Case/fields/Blue_Tarp_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Blue_Tarp_Application_Type__c</fullName>
    <label>Blue Tarp Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comm Pro - Ext Terms</fullName>
            </value>
            <value>
                <fullName>Consent Form</fullName>
            </value>
            <value>
                <fullName>Service Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>