force-app/main/default/objects/Case/fields/Blue_Tarp_Consent_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>Blue_Tarp_Consent_Form_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blue Tarp Consent Form Received</label>
    <type>Checkbox</type>
</CustomField>