force-app/main/default/objects/Case/fields/Blue_Tarp_Response__c.field-meta.xml
<CustomField>
    <fullName>Blue_Tarp_Response__c</fullName>
    <label>Blue Tarp Response</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Counter Offer</fullName>
            </value>
            <value>
                <fullName>Blue Tarp Recourse</fullName>
            </value>
            <value>
                <fullName>Paperwork Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>