force-app/main/default/objects/Case/fields/Blue_Tarp_s_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Blue_Tarp_s_Response_Time__c</fullName>
    <formula>IF ( Time_for_Blue_Tarp_s_Response__c &gt; 0, 
TEXT(FLOOR( Time_for_Blue_Tarp_s_Response__c)) &amp; &quot; days &quot; &amp; 
TEXT( FLOOR( 24 * ( Time_for_Blue_Tarp_s_Response__c - FLOOR(Time_for_Blue_Tarp_s_Response__c) ))) &amp; &quot; hours&quot; &amp; 
TEXT( ROUND(60 * (ROUND( 24 * ( Time_for_Blue_Tarp_s_Response__c - FLOOR(Time_for_Blue_Tarp_s_Response__c) ),8) - FLOOR( 
ROUND( 24 * ( Time_for_Blue_Tarp_s_Response__c - FLOOR(Time_for_Blue_Tarp_s_Response__c) ),8)) ),0)) &amp; &quot; mn &quot; 
, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blue Tarp&#39;s Response Time</label>
    <type>Text</type>
</CustomField>