force-app/main/default/objects/Case/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <label>How was the site viewed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chrome</fullName>
            </value>
            <value>
                <fullName>Firefox</fullName>
            </value>
            <value>
                <fullName>Internet Explorer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Safari</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>