force-app/main/default/objects/Case/fields/Browser_Version__c.field-meta.xml
<CustomField>
    <fullName>Browser_Version__c</fullName>
    <label>Browser Version(if known)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>