force-app/main/default/objects/Case/fields/Business_Days_to_Create_Order__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_to_Create_Order__c</fullName>
    <formula>ABS( 

CASE(MOD (datevalue( CreatedDate )- DATE(1985,6,24),7), 
0 , CASE( MOD( Datevalue( Order_Create_Date__c  ) - datevalue(CreatedDate) 
,7),1,2,2,3,3,4,4,5,5,5,6,5,1) 
, 
1 , CASE( MOD( Datevalue( Order_Create_Date__c ) - datevalue(CreatedDate) 
,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Datevalue( Order_Create_Date__c  ) - datevalue(CreatedDate) 
,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Datevalue( Order_Create_Date__c ) - datevalue(CreatedDate) 
,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Datevalue( Order_Create_Date__c ) - datevalue(CreatedDate) 
,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Datevalue( Order_Create_Date__c ) - datevalue(CreatedDate) 
,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Datevalue( Order_Create_Date__c ) - datevalue(CreatedDate) 
,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((( Order_Create_Date__c  ) - ( CreatedDate) )/7)*5)-1 + 

( Order_Create_Date__c  - CreatedDate) - (datevalue( Order_Create_Date__c ) - 
datevalue(CreatedDate)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days to Create Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>