force-app/main/default/objects/Case/fields/Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment__c</fullName>
    <formula>TEXT(Account.SHC_Segment__c)</formula>
    <inlineHelpText>Populates based on SHC Segment indicated on the Account record</inlineHelpText>
    <label>Business Segment</label>
    <type>Text</type>
</CustomField>