force-app/main/default/objects/Case/fields/BusinessSegment__c.field-meta.xml
<CustomField>
    <fullName>BusinessSegment__c</fullName>
    <label>Business Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>MF New and Property Management</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SF Builder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>