force-app/main/default/objects/Case/fields/Case_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Created Date</label>
    <type>DateTime</type>
</CustomField>