force-app/main/default/objects/Case/fields/Case_Order_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Order_Status_Date__c</fullName>
    <inlineHelpText>This is the date the users updated the case to an &quot;Order Created&quot; status</inlineHelpText>
    <label>Case Order Status Date</label>
    <type>Date</type>
</CustomField>