force-app/main/default/objects/Case/fields/Case_Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Active__c</fullName>
    <formula>CreatedBy.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Creator: Active</label>
    <type>Checkbox</type>
</CustomField>