force-app/main/default/objects/Case/fields/Case_Reason2__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason2__c</fullName>
    <description>Custom case reason field used as a dependent field for Type field dependency</description>
    <label>Case Reason!</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Task Completed</fullName>
            </value>
            <value>
                <fullName>Coaching</fullName>
            </value>
            <value>
                <fullName>System Issue Resolved</fullName>
            </value>
            <value>
                <fullName>System Issue Escalated</fullName>
            </value>
            <value>
                <fullName>Other Team Escalated</fullName>
            </value>
            <value>
                <fullName>New Feature Request</fullName>
            </value>
            <value>
                <fullName>Recorded</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Duplicate Request</fullName>
            </value>
            <value>
                <fullName>Information not readily available</fullName>
            </value>
            <value>
                <fullName>Don&#39;t know who to contact for information</fullName>
            </value>
            <value>
                <fullName>Lack of design skills</fullName>
            </value>
            <value>
                <fullName>Lack of writing skills</fullName>
            </value>
            <value>
                <fullName>Don&#39;t know where to get asset</fullName>
            </value>
            <value>
                <fullName>Asset not available</fullName>
            </value>
            <value>
                <fullName>Need information</fullName>
            </value>
            <value>
                <fullName>Don&#39;t know how to register</fullName>
            </value>
            <value>
                <fullName>Don&#39;t know/forgot password</fullName>
            </value>
            <value>
                <fullName>Don&#39;t have assets readily available</fullName>
            </value>
            <value>
                <fullName>User error</fullName>
            </value>
            <value>
                <fullName>User never set up</fullName>
            </value>
            <value>
                <fullName>New product</fullName>
            </value>
            <value>
                <fullName>Division/category never loaded into Online Catalog</fullName>
            </value>
            <value>
                <fullName>User does not want to manually add them</fullName>
            </value>
            <value>
                <fullName>System issue/change</fullName>
            </value>
            <value>
                <fullName>Bad data in SPIN</fullName>
            </value>
            <value>
                <fullName>Bad data in MDM</fullName>
            </value>
            <value>
                <fullName>Double product images - no feature product links</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>