force-app/main/default/objects/Case/fields/Case_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_Other__c</fullName>
    <description>Allows case owners to enter &quot;other&quot; case reasons</description>
    <label>Case Reason - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>