force-app/main/default/objects/Case/fields/Cases_I_Created__c.field-meta.xml
<CustomField>
    <fullName>Cases_I_Created__c</fullName>
    <formula>IF( CreatedBy.Id = $User.Id , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cases I Created</label>
    <type>Checkbox</type>
</CustomField>