force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Expeditor - Select the category that best describes the type of assistance being requesting</description>
    <inlineHelpText>Select the category that best describes the type of assistance being requesting</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Checking Installer</fullName>
            </value>
            <value>
                <fullName>Install No Show</fullName>
            </value>
            <value>
                <fullName>Customer Satisfaction</fullName>
            </value>
            <value>
                <fullName>Delivery Overcharge</fullName>
            </value>
            <value>
                <fullName>Product Overcharge</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Wrong Cust ID</fullName>
            </value>
            <value>
                <fullName>Wrong MOP</fullName>
            </value>
            <value>
                <fullName>Credit (Adjustments)</fullName>
            </value>
            <value>
                <fullName>Quotes</fullName>
            </value>
            <value>
                <fullName>Sales Orders</fullName>
            </value>
            <value>
                <fullName>Add’l info needed</fullName>
            </value>
            <value>
                <fullName>Citi</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Add’l Forms</fullName>
            </value>
            <value>
                <fullName>CME Credit</fullName>
            </value>
            <value>
                <fullName>Common Carrier</fullName>
            </value>
            <value>
                <fullName>Damage Property</fullName>
            </value>
            <value>
                <fullName>Date Change</fullName>
            </value>
            <value>
                <fullName>DDC Short Ship</fullName>
            </value>
            <value>
                <fullName>Freight Lane</fullName>
            </value>
            <value>
                <fullName>Install Issues</fullName>
            </value>
            <value>
                <fullName>No Haul Away</fullName>
            </value>
            <value>
                <fullName>No Install</fullName>
            </value>
            <value>
                <fullName>POD Request</fullName>
            </value>
            <value>
                <fullName>Store Pick-up</fullName>
            </value>
            <value>
                <fullName>Cancel Order</fullName>
            </value>
            <value>
                <fullName>Parts Order</fullName>
            </value>
            <value>
                <fullName>Print Ord/Inv</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>