force-app/main/default/objects/Case/fields/CDC__c.field-meta.xml
<CustomField>
    <fullName>CDC__c</fullName>
    <label>CDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>