force-app/main/default/objects/Case/fields/ChangeCaseOwner__Case_Owner2__c.field-meta.xml
<CustomField>
    <fullName>ChangeCaseOwner__Case_Owner2__c</fullName>
    <formula>HYPERLINK( 
IF(BEGINS(OwnerId, &#39;00G&#39;), 
&#39;p/own/Queue/d?id=&#39;&amp;OwnerId, 
OwnerId 
), 
IF(BEGINS(OwnerId, &#39;00G&#39;), 
Owner:Queue.Name, 
Owner:User.FirstName &amp; &#39; &#39; &amp; Owner:User.LastName 
) 
) &amp; &#39; &#39; &amp; HYPERLINK( 
&#39;/apex/ChangeCaseOwner__Case_Owner_Change?cid=&#39;&amp;Id,
&#39;[Change]&#39;, 
&#39;_self&#39; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>