force-app/main/default/objects/Case/fields/Chargeback_Date__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Date__c</fullName>
    <label>Chargeback Date</label>
    <type>Date</type>
</CustomField>