force-app/main/default/objects/Case/fields/Chargeback_Status__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Status__c</fullName>
    <label>Chargeback Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Augusta Working</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Collected/Paid</fullName>
            </value>
            <value>
                <fullName>In-house Collections</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending Additional Information from Sears Member</fullName>
            </value>
            <value>
                <fullName>Pending Member Response</fullName>
            </value>
            <value>
                <fullName>Pending Resolution with Member</fullName>
            </value>
            <value>
                <fullName>Recovered</fullName>
            </value>
            <value>
                <fullName>Referred to 3rd Party Collections</fullName>
            </value>
            <value>
                <fullName>Sears Accepted Settlement</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Uncollectible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>