force-app/main/default/objects/Case/fields/Chargeback_Type__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Type__c</fullName>
    <label>Chargeback Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>21-Damage Mdse</fullName>
            </value>
            <value>
                <fullName>22-Duplicate Sale</fullName>
            </value>
            <value>
                <fullName>23-Invoice Detail Needed</fullName>
            </value>
            <value>
                <fullName>24-Incorrect PO#</fullName>
            </value>
            <value>
                <fullName>25-Signature Request</fullName>
            </value>
            <value>
                <fullName>26-Did Not Receive Mdse</fullName>
            </value>
            <value>
                <fullName>27-POD</fullName>
            </value>
            <value>
                <fullName>28-Pricing</fullName>
            </value>
            <value>
                <fullName>29-Poor Service</fullName>
            </value>
            <value>
                <fullName>31-RMA</fullName>
            </value>
            <value>
                <fullName>32-Shipping &amp; Freight</fullName>
            </value>
            <value>
                <fullName>36-Unauthorized Sales</fullName>
            </value>
            <value>
                <fullName>403-Recourse Concession</fullName>
            </value>
            <value>
                <fullName>41-Credit Issued in Error</fullName>
            </value>
            <value>
                <fullName>50-Unauthorized Buyer</fullName>
            </value>
            <value>
                <fullName>51-Cancellation</fullName>
            </value>
            <value>
                <fullName>52-Bldr Charged in Error</fullName>
            </value>
            <value>
                <fullName>54-Sales Amount Exceeds Authorization Amount</fullName>
            </value>
            <value>
                <fullName>56-Small Balance</fullName>
            </value>
            <value>
                <fullName>58-Partial Shipment</fullName>
            </value>
            <value>
                <fullName>87-Sales Tax</fullName>
            </value>
            <value>
                <fullName>90-No Matching Auth</fullName>
            </value>
            <value>
                <fullName>D28-Require Auth</fullName>
            </value>
            <value>
                <fullName>D29-Customer Disputes Merchandise</fullName>
            </value>
            <value>
                <fullName>D30-Declined Authorization</fullName>
            </value>
            <value>
                <fullName>Dispute to Chargeback - BT</fullName>
            </value>
            <value>
                <fullName>Dispute to Chargeback - Citi</fullName>
            </value>
            <value>
                <fullName>Misc/Non Lender Related Charge back</fullName>
            </value>
            <value>
                <fullName>Recourse-Cont</fullName>
            </value>
            <value>
                <fullName>Third Party Chargeback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>