force-app/main/default/objects/Case/fields/Citi_Comments__c.field-meta.xml
<CustomField>
    <fullName>Citi_Comments__c</fullName>
    <label>Citi Comments</label>
    <type>TextArea</type>
</CustomField>