force-app/main/default/objects/Case/fields/Collateral__c.field-meta.xml
<CustomField>
    <fullName>Collateral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collateral</label>
    <type>Checkbox</type>
</CustomField>