force-app/main/default/objects/Case/fields/Commercial_Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Credit_Status__c</fullName>
    <label>Commercial Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Sent to Citi</fullName>
            </value>
            <value>
                <fullName>Sent to Blue Tarp</fullName>
            </value>
            <value>
                <fullName>Sent to Recourse</fullName>
            </value>
            <value>
                <fullName>Exception Review</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>