force-app/main/default/objects/Case/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <inlineHelpText>Comment on Competitors</inlineHelpText>
    <label>Competitors</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>